Ignore restricted method use warning